# happen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/happen-ai/: Cargo.toml
crates/happen-ai/src/: applicator.rs  lib.rs  orchestrator.rs  provider.rs
crates/happen-core/: Cargo.toml
crates/happen-core/src/: input.rs  lib.rs
crates/happen-core/src/app/: mod.rs  time.rs
crates/happen-core/src/ecs/: component.rs  entity.rs  events.rs  mod.rs  resource.rs  world.rs
crates/happen-engine/: Cargo.toml
crates/happen-engine/src/: lib.rs
crates/happen-math/: Cargo.toml
crates/happen-math/src/: aabb.rs  color.rs  lib.rs  ray.rs  transform.rs
crates/happen-physics/: Cargo.toml
crates/happen-physics/src/: body.rs  collider.rs  collision.rs  lib.rs  rules.rs  solver.rs  systems.rs
crates/happen-render/: Cargo.toml
crates/happen-render/src/: camera.rs  controller.rs  lib.rs  material.rs  mesh.rs  plugin.rs  renderer.rs  vertex.rs
crates/happen-render/src/shaders/: mesh.wgsl
crates/happen-world/: Cargo.toml
crates/happen-world/src/: blueprint.rs  lib.rs  manager.rs  terrain.rs  zone.rs
demos/: playground.json  plaza.json
happen-cli/: Cargo.toml
happen-cli/src/: main.rs
