[package]
name = "happen-ai"
version.workspace = true
edition.workspace = true

[dependencies]
happen-core.workspace = true
happen-world.workspace = true
happen-physics.workspace = true
happen-math.workspace = true
happen-render.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
log.workspace = true
async-trait = "0.1"
