[package]
name = "happen-render"
version.workspace = true
edition.workspace = true

[dependencies]
happen-math.workspace = true
happen-core.workspace = true
serde.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
